Add animation brand and website photo

--- a/index.html
+++ b/index.html
@@ -231,16 +231,15 @@
                         <div class="col-12">
                            <div class="banner__content">
                               <h1 class="text-uppercase text-start fw-9 mb-0 title-anim">
-                                 We are
-                                 <span class="text-stroke">creative</span>
+                                 Ogah
+                                 <span class="text-stroke">Rugi</span>
                                  <span class="interval">
                                     <i class="icon-arrow-top-right"></i>
-                                    digital agency
+                                    Rindu Komisi
                                  </span>
                               </h1>
                               <div class="banner__content-inner">
-                                 <p>We are a full-service website design, development and digital marketing company
-                                    specializing in SEO, content marketing that grows brands.</p>
+                                 <p>We are a full-service Activation Booth Design, Illustration, Graphic Design, Branding, website design and development that grows brands.</p>
                                  <div class="cta section__content-cta">
                                     <div class="single">
                                        <h5 class="fw-7">
@@ -264,7 +263,7 @@
                      class="banner-one-thumb d-none d-sm-block g-ban-one">
                   <img src="assets/images/star.png" alt="Image" class="star">
                   <div class="banner-left-text banner-social-text d-none d-md-flex">
-                     <a href="mailto:info@xpovio.com">mail : info@xpovio.com</a>
+                     <a href="mailto:info@xpovio.com">mail : fajarpuput@gmail.com</a>
                      <a href="tel:99-2158-003-6980">Call : +99 2158 003 6980</a>
                   </div>
                   <div class="banner-right-text banner-social-text d-none d-md-flex">
@@ -312,15 +311,15 @@
                                  agency in Bali
                               </h2>
                               <div class="paragraph">
-                                 <p>Bring to the table win-win survival strategies to ensure proactive domination. At
-                                    the end of the day, going forward, a new normal that has evolved from generation on
-                                    the runway heading towards a streamlined cloud solution going forward porttitor
-                                    dictum sapien.</p>
+                                 <p>We are a digital creative agency located in the vibrant and culturally rich island of Bali. 
+                                    Our team of passionate professionals is dedicated to crafting innovative and visually stunning 
+                                    solutions that elevate your brand. Let us help you tell your story and connect with your audience in meaningful ways.
+                                 </p>
                               </div>
                               <div class="skill-wrap">
                                  <div class="skill-bar-single">
                                     <div class="skill-bar-title">
-                                       <p class="primary-text">Website design</p>
+                                       <p class="primary-text">Activation</p>
                                     </div>
                                     <div class="skill-bar-wrapper" data-percent="75%">
                                        <div class="skill-bar">
@@ -332,7 +331,7 @@
                                  </div>
                                  <div class="skill-bar-single">
                                     <div class="skill-bar-title">
-                                       <p class="primary-text">Digital Marketing</p>
+                                       <p class="primary-text">Branding</p>
                                     </div>
                                     <div class="skill-bar-wrapper" data-percent="90%">
                                        <div class="skill-bar">
@@ -434,14 +433,14 @@
                         <div class="col-12 col-sm-6 col-xl-3">
                            <div class="portfolio__single topy-tilt fade-top">
                               <a href="portfolio.html">
-                                 <img src="assets/images/portfolio/two.png" alt="Image">
+                                 <img src="assets/images/portfolio/branding.jpg" alt="Image">
                               </a>
                               <div class="portfolio__single-content">
                                  <a href="portfolio.html">
                                     <i class="fa-sharp fa-solid fa-arrow-up-right"></i>
                                  </a>
                                  <h4>
-                                    <a href="portfolio.html">Branding</a>
+                                    <a href="portfolio.html">Graphic Design</a>
                                  </h4>
                               </div>
                            </div>
@@ -449,7 +448,7 @@
                         <div class="col-12 col-sm-6 col-xl-3">
                            <div class="portfolio__single topy-tilt fade-top">
                               <a href="portfolio.html">
-                                 <img src="assets/images/portfolio/three.png" alt="Image">
+                                 <img src="assets/images/portfolio/website.jpg" alt="Image">
                               </a>
                               <div class="portfolio__single-content">
                                  <a href="portfolio.html">
@@ -464,7 +463,7 @@
                         <div class="col-12 col-sm-6 col-xl-3">
                            <div class="portfolio__single topy-tilt fade-top">
                               <a href="portfolio.html">
-                                 <img src="assets/images/portfolio/four.png" alt="Image">
+                                 <img src="assets/images/portfolio/animation.jpg" alt="Image">
                               </a>
                               <div class="portfolio__single-content">
                                  <a href="portfolio.html">
@@ -560,10 +559,7 @@
                                  Giving Your Business Some Great Ideas
                               </h2>
                               <div class="paragraph">
-                                 <p>Bring to the table win-win survival strategies to ensure proactive domination. At
-                                    the end of the day, going forward, a new normal that has evolved from generation on
-                                    the runway heading towards a streamlined cloud solution going forward porttitor
-                                    dictum sapien.</p>
+                                 <p>At our digital creative agency in Bali, we offer a comprehensive range of services to elevate your brand and connect with your audience. Our expertise spans activation design, branding, website design, illustration, and graphic design, ensuring that every aspect of your digital presence is crafted with precision and creativity.</p>
                               </div>
                               <div class="section__content-cta">
                                  <a href="our-services.html" class="btn btn--secondary">view all services</a>
@@ -579,16 +575,30 @@
                                  </span>
                                  <h2>
                                     <a href="service-single.html">
-                                       uI / uX experience
+                                       Activation Booth
                                        <i class="fa-sharp fa-solid fa-arrow-up-right"></i>
                                     </a>
                                  </h2>
                                  <div class="offer-thumb-hover d-none d-md-block"
-                                    data-background="assets/images/offer/blog-thumb.png"></div>
+                                    data-background="assets/images/agency/bg-3.jpg"></div>
                               </div>
                               <div class="offer__cta-single fade-top">
                                  <span class="sub-title">
                                     02
+                                    <i class="fa-solid fa-arrow-right"></i>
+                                 </span>
+                                 <h2>
+                                    <a href="service-single.html">
+                                       Graphic Design
+                                       <i class="fa-sharp fa-solid fa-arrow-up-right"></i>
+                                    </a>
+                                 </h2>
+                                 <div class="offer-thumb-hover d-none d-md-block"
+                                    data-background="assets/images/portfolio/branding.jpg"></div>
+                              </div>
+                              <div class="offer__cta-single fade-top">
+                                 <span class="sub-title">
+                                    03
                                     <i class="fa-solid fa-arrow-right"></i>
                                  </span>
                                  <h2>
@@ -598,21 +608,7 @@
                                     </a>
                                  </h2>
                                  <div class="offer-thumb-hover d-none d-md-block"
-                                    data-background="assets/images/offer/two.png"></div>
-                              </div>
-                              <div class="offer__cta-single fade-top">
-                                 <span class="sub-title">
-                                    03
-                                    <i class="fa-solid fa-arrow-right"></i>
-                                 </span>
-                                 <h2>
-                                    <a href="service-single.html">
-                                       digital marketing
-                                       <i class="fa-sharp fa-solid fa-arrow-up-right"></i>
-                                    </a>
-                                 </h2>
-                                 <div class="offer-thumb-hover d-none d-md-block"
-                                    data-background="assets/images/offer/three.png"></div>
+                                    data-background="assets/images/portfolio/website.jpg"></div>
                               </div>
                               <div class="offer__cta-single fade-top">
                                  <span class="sub-title">
@@ -621,12 +617,12 @@
                                  </span>
                                  <h2>
                                     <a href="service-single.html">
-                                       product design
+                                       Animation
                                        <i class="fa-sharp fa-solid fa-arrow-up-right"></i>
                                     </a>
                                  </h2>
                                  <div class="offer-thumb-hover d-none d-md-block"
-                                    data-background="assets/images/offer/blog-thumb.png"></div>
+                                    data-background="assets/images/portfolio/animation.jpg"></div>
                               </div>
                            </div>
                         </div>
@@ -643,7 +639,7 @@
                </section>
                <!-- ==== / offer end ==== -->
                <!-- ==== testimonial start ==== -->
-               <section class="section testimonial pt-0 position-relative">
+               <!-- <section class="section testimonial pt-0 position-relative">
                   <div class="testimonial__text-slider">
                      <div class="testimonial__text-slider-single">
                         <h2 class="h1">
@@ -816,10 +812,10 @@
                      <div class="line"></div>
                      <div class="line"></div>
                   </div>
-               </section>
+               </section> -->
                <!-- ==== / testimonial end ==== -->
                <!-- ==== blog start ==== -->
-               <section class="section blog fade-wrapper">
+               <!-- <section class="section blog fade-wrapper">
                   <div class="container">
                      <div class="row justify-content-center">
                         <div class="col-12 col-lg-8">
@@ -877,7 +873,7 @@
                         </div>
                      </div>
                   </div>
-               </section>
+               </section> -->
                <!-- ==== / blog end ==== -->
                <!-- ==== sponsor start ==== -->
                <div class="sponsor section pb-0">
@@ -1024,14 +1020,14 @@
                      <div class="col-12 col-lg-5 col-xl-6">
                         <div class="footer__single">
                            <a href="index.html" class="logo">
-                              <img src="assets/images/logo.png" alt="Image">
+                              <img src="assets/images/rindukomisi-wt.png" alt="Image">
                            </a>
                            <div class="footer__single-meta">
                               <a href="https://www.google.com/maps/d/viewer?mid=1UZ57Drfs3SGrTgh6mrYjQktu6uY&hl=en_US&ll=18.672105000000013%2C105.68673800000003&z=17"
                                  target="_blank">
                                  <i class="fa-sharp fa-solid fa-location-dot"></i>
-                                 901 N Pitt Str., Suite 170
-                                 Alexandria, USA
+                                 Sunset Road 170
+                                 Bali, Indonesia
                               </a>
                               <a href="tel:406-555-0120">
                                  <i class="fa-sharp fa-solid fa-phone-volume"></i>
@@ -1039,7 +1035,7 @@
                               </a>
                               <a href="mailto:info@xpovio.com">
                                  <i class="fa-sharp fa-solid fa-envelope"></i>
-                                 info@xpovio.com
+                                 info@rindukomisi.com
                               </a>
                            </div>
                            <div class="footer__cta text-start">
@@ -1058,13 +1054,13 @@
                                     <a href="about-us.html">About Us</a>
                                  </li>
                                  <li>
-                                    <a href="client-feedback.html">Award Winning</a>
+                                    <a href="client-feedback.html">Services</a>
                                  </li>
                                  <li>
-                                    <a href="blog.html">News & Blog</a>
+                                    <a href="blog.html">Portfolio</a>
                                  </li>
                                  <li>
-                                    <a href="contact-us.html">careers</a>
+                                    <a href="contact-us.html">Contact Us</a>
                                  </li>
                               </ul>
                            </div>
@@ -1098,7 +1094,7 @@
                         <div class="footer__copyright">
                            <div class="row align-items-center gaper">
                               <div class="col-12 col-lg-8">
-                                 <div class="footer__copyright-text text-center text-lg-start">
+                                 <!-- <div class="footer__copyright-text text-center text-lg-start">
                                     <p>
                                        Copyright &copy;
                                        <span id="copyYear"></span>
@@ -1107,7 +1103,7 @@
                                           target="_blank">GramenTheme</a>
                                        . All Rights Reserved
                                     </p>
-                                 </div>
+                                 </div> -->
                               </div>
                               <div class="col-12 col-lg-4">
                                  <div class="social justify-content-center justify-content-lg-end">
