--- a/index.html
+++ b/index.html
@@ -231,11 +231,11 @@
                         <div class="col-12">
                            <div class="banner__content">
                               <h1 class="text-uppercase text-start fw-9 mb-0 title-anim">
-                                 Ogah
-                                 <span class="text-stroke">Rugi</span>
+                                 Rindu
+                                 <span class="text-stroke">Komisi</span>
                                  <span class="interval">
                                     <i class="icon-arrow-top-right"></i>
-                                    Rindu Komisi
+                                    Creative Design
                                  </span>
                               </h1>
                               <div class="banner__content-inner">
