--- a/portfolio.html
+++ b/portfolio.html
@@ -255,7 +255,7 @@
                </section>
                <!-- ==== / banner end ==== -->
                <!-- ==== portfolio start ==== -->
-               <section class="section portfolio-m fade-wrapper">
+               <!-- <section class="section portfolio-m fade-wrapper">
                   <div class="container">
                      <div class="row gaper">
                         <div class="col-12 col-lg-6">
@@ -419,8 +419,191 @@
                         </div>
                      </div>
                   </div>
-               </section>
+               </section> -->
                <!-- ==== portfolio end ==== -->
+                               <!-- ==== portfolio start ==== -->
+               <section class="section portfolio portfolio-two portfolio-filter fade-wrapper">
+                  <div class="portfolio__text-slider">
+                     <div class="portfolio__text-slider-single">
+                        <h2 class="h1">
+                           <a href="portfolio.html">
+                              digital portfolio
+                              <i class="fa-sharp fa-solid fa-arrow-down-right"></i>
+                           </a>
+                        </h2>
+                     </div>
+                     <div class="portfolio__text-slider-single">
+                        <h2 class="h1">
+                           <a href="portfolio.html">
+                              digital portfolio
+                              <i class="fa-sharp fa-solid fa-arrow-down-right"></i>
+                           </a>
+                        </h2>
+                     </div>
+                     <div class="portfolio__text-slider-single">
+                        <h2 class="h1">
+                           <a href="portfolio.html">
+                              digital portfolio
+                              <i class="fa-sharp fa-solid fa-arrow-down-right"></i>
+                           </a>
+                        </h2>
+                     </div>
+                     <div class="portfolio__text-slider-single">
+                        <h2 class="h1">
+                           <a href="portfolio.html">
+                              digital portfolio
+                              <i class="fa-sharp fa-solid fa-arrow-down-right"></i>
+                           </a>
+                        </h2>
+                     </div>
+                     <div class="portfolio__text-slider-single">
+                        <h2 class="h1">
+                           <a href="portfolio.html">
+                              digital portfolio
+                              <i class="fa-sharp fa-solid fa-arrow-down-right"></i>
+                           </a>
+                        </h2>
+                     </div>
+                     <div class="portfolio__text-slider-single">
+                        <h2 class="h1">
+                           <a href="portfolio.html">
+                              digital portfolio
+                              <i class="fa-sharp fa-solid fa-arrow-down-right"></i>
+                           </a>
+                        </h2>
+                     </div>
+                     <div class="portfolio__text-slider-single">
+                        <h2 class="h1">
+                           <a href="portfolio.html">
+                              digital portfolio
+                              <i class="fa-sharp fa-solid fa-arrow-down-right"></i>
+                           </a>
+                        </h2>
+                     </div>
+                  </div>
+                  <div class="container">
+                     <div class="row justify-content-center">
+                        <div class="col-12 col-lg-6 col-xl-4 text-center">
+                           <div class="portfolio-two__filter-btn section__header g-ind">
+                              <button aria-label="Filter Portfolio" data-filter="*" class="active">
+                                 <span>01</span>
+                                 All
+                              </button>
+                              <button aria-label="Filter Portfolio" data-filter=".activation">
+                                 <span>02</span>
+                                 Activation
+                              </button>
+                              <button aria-label="Filter Portfolio" data-filter=".development">
+                                 <span>03</span>
+                                 Graphic
+                              </button>
+                              <button aria-label="Filter Portfolio" data-filter=".technology">
+                                 <span>04</span>
+                                 Website
+                              </button>
+                              <button aria-label="Filter Portfolio" data-filter=".animation">
+                                 <span>05</span>
+                                 Animation
+                              </button>
+                           </div>
+                        </div>
+                     </div>
+                     <div class="row masonry-grid">
+                        <div class="col-12 col-md-6 col-xl-4 filter-item-space grid-item-main activation">
+                           <div class="portfolio__single portfolio__single-active topy-tilt fade-top">
+                              <a href="portfolio.html">
+                                 <img src="assets/images/portfolio/vr-mbloc-1.jpg" alt="Image">
+                              </a>
+                              <div class="portfolio__single-content">
+                                 <a href="portfolio.html">
+                                    <i class="fa-sharp fa-solid fa-arrow-up-right"></i>
+                                 </a>
+                                 <h4>
+                                    <a href="portfolio.html">Activation</a>
+                                 </h4>
+                              </div>
+                           </div>
+                        </div>
+                        <div class="col-12 col-md-6 col-xl-4 filter-item-space grid-item-main activation">
+                           <div class="portfolio__single topy-tilt fade-top">
+                              <a href="portfolio.html">
+                                 <img src="assets/images/portfolio/grand_launch_tigersoju_2023_10.jpg" alt="Image">
+                              </a>
+                              <div class="portfolio__single-content">
+                                 <a href="portfolio.html">
+                                    <i class="fa-sharp fa-solid fa-arrow-up-right"></i>
+                                 </a>
+                                 <h4>
+                                    <a href="portfolio.html">Activation</a>
+                                 </h4>
+                              </div>
+                           </div>
+                        </div>
+                        <div class="col-12 col-md-6 col-xl-4 filter-item-space grid-item-main technology development">
+                           <div class="portfolio__single topy-tilt fade-top">
+                              <a href="portfolio.html">
+                                 <img src="assets/images/portfolio/three.png" alt="Image">
+                              </a>
+                              <div class="portfolio__single-content">
+                                 <a href="portfolio.html">
+                                    <i class="fa-sharp fa-solid fa-arrow-up-right"></i>
+                                 </a>
+                                 <h4>
+                                    <a href="portfolio.html">Digital Marketing</a>
+                                 </h4>
+                              </div>
+                           </div>
+                        </div>
+                        <div class="col-12 col-md-6 col-xl-4 filter-item-space grid-item-main design">
+                           <div class="portfolio__single topy-tilt fade-top">
+                              <a href="portfolio.html">
+                                 <img src="assets/images/portfolio/four.png" alt="Image">
+                              </a>
+                              <div class="portfolio__single-content">
+                                 <a href="portfolio.html">
+                                    <i class="fa-sharp fa-solid fa-arrow-up-right"></i>
+                                 </a>
+                                 <h4>
+                                    <a href="portfolio.html">Digital Marketing</a>
+                                 </h4>
+                              </div>
+                           </div>
+                        </div>
+                        <div class="col-12 col-md-6 col-xl-4 filter-item-space grid-item-main design development">
+                           <div class="portfolio__single topy-tilt fade-top">
+                              <a href="portfolio.html">
+                                 <img src="assets/images/portfolio/five.png" alt="Image">
+                              </a>
+                              <div class="portfolio__single-content">
+                                 <a href="portfolio.html">
+                                    <i class="fa-sharp fa-solid fa-arrow-up-right"></i>
+                                 </a>
+                                 <h4>
+                                    <a href="portfolio.html">Digital Marketing</a>
+                                 </h4>
+                              </div>
+                           </div>
+                        </div>
+                        <div
+                           class="col-12 col-md-6 col-xl-4 filter-item-space grid-item-main design technology development">
+                           <div class="portfolio__single topy-tilt fade-top">
+                              <a href="portfolio.html">
+                                 <img src="assets/images/portfolio/one.png" alt="Image">
+                              </a>
+                              <div class="portfolio__single-content">
+                                 <a href="portfolio.html">
+                                    <i class="fa-sharp fa-solid fa-arrow-up-right"></i>
+                                 </a>
+                                 <h4>
+                                    <a href="portfolio.html">Digital Marketing</a>
+                                 </h4>
+                              </div>
+                           </div>
+                        </div>
+                     </div>
+                  </div>
+               </section>
+
             </main>
             <!-- ==== / main end ==== -->
             <!-- ==== footer start ==== -->
