add sedikit asset

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <!-- #favicon -->
-   <link rel="shortcut icon" href="assets/images/favicon.png" type="image/x-icon">
+   <link rel="shortcut icon" href="assets/images/favicon-2.png" type="image/x-icon">
    <!-- #title -->
-   <title>Xpovio - Digital Agency Creative Portfolio Template</title>
+   <title>Rindu Komisi - Digital Agency Creative</title>
    <!-- #keywords -->
    <meta name="keywords" content="creative, agency, portfolio">
    <!-- #description -->
@@ -88,45 +88,13 @@
                <div class="offcanvas-menu__list">
                   <div class="navbar__menu">
                      <ul class="navbar__list">
-                        <li class="navbar__item navbar__item--has-children nav-fade">
+                        <li class="navbar__item nav-fade">
                            <button aria-label="dropdown menu" class="navbar__dropdown-label">Home</button>
-                           <ul class="navbar__sub-menu">
-                              <li>
-                                 <a href="index.html">Creative Agency</a>
-                              </li>
-                              <li>
-                                 <a href="index-light.html">Creative Agency Light</a>
-                              </li>
-                              <li>
-                                 <a href="index-two.html">Digital Agency</a>
-                              </li>
-                              <li>
-                                 <a href="index-two-light.html">Digital Agency Light</a>
-                              </li>
-                              <li>
-                                 <a href="index-three.html">It Solution</a>
-                              </li>
-                              <li>
-                                 <a href="index-three-light.html">It Solution Light</a>
-                              </li>
-                              <li>
-                                 <a href="index-four.html">Personal Portfolio</a>
-                              </li>
-                              <li>
-                                 <a href="index-four-light.html">Personal Portfolio Light</a>
-                              </li>
-                              <li>
-                                 <a href="index-five.html">Interactive Portfolio</a>
-                              </li>
-                              <li>
-                                 <a href="index-five-light.html">Interactive Portfolio Light</a>
-                              </li>
-                           </ul>
                         </li>
                         <li class="navbar__item nav-fade">
                            <a href="about-us.html">About Us</a>
                         </li>
-                        <li class="navbar__item navbar__item--has-children nav-fade">
+                        <li class="navbar__item nav-fade">
                            <button aria-label="dropdown menu" class="navbar__dropdown-label">Services</button>
                            <ul class="navbar__sub-menu">
                               <li>
@@ -137,7 +105,7 @@
                               </li>
                            </ul>
                         </li>
-                        <li class="navbar__item navbar__item--has-children nav-fade">
+                        <li class="navbar__item nav-fade">
                            <button aria-label="dropdown menu" class="navbar__dropdown-label">Projects</button>
                            <ul class="navbar__sub-menu">
                               <li>
@@ -148,7 +116,7 @@
                               </li>
                            </ul>
                         </li>
-                        <li class="navbar__item navbar__item--has-children nav-fade">
+                        <li class="navbar__item nav-fade">
                            <button aria-label="dropdown menu" class="navbar__dropdown-label">Pages</button>
                            <ul class="navbar__sub-menu">
                               <li>
@@ -183,7 +151,7 @@
                               </li>
                            </ul>
                         </li>
-                        <li class="navbar__item navbar__item--has-children nav-fade">
+                        <li class="navbar__item nav-fade">
                            <button aria-label="dropdown menu" class="navbar__dropdown-label">Blog</button>
                            <ul class="navbar__sub-menu">
                               <li>
