--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
    <link rel="stylesheet" href="assets/vendor/slick/css/slick.css">
    <!-- ==== / css dependencies end ==== -->
    <!-- main css -->
-   <link rel="stylesheet" href="assets/css/main.min.css">
+   <link rel="stylesheet" href="assets/scss/main.css">
 </head>
 
 <body>
@@ -381,7 +381,7 @@
                         </h2>
                      </div>
                   </div>
-                  <div class="container-fluid">
+                  <!-- <div class="container-fluid">
                      <div class="row gaper">
                         <div class="col-12 col-sm-6 col-xl-3">
                            <div class="portfolio__single portfolio__single-active topy-tilt fade-top">
@@ -443,7 +443,7 @@
                               </div>
                            </div>
                         </div>
-                        <!-- <div class="col-12 col-sm-6 col-xl-3">
+                        <div class="col-12 col-sm-6 col-xl-3">
                            <div class="portfolio__single topy-tilt fade-top">
                               <a href="portfolio.html">
                                  <img src="assets/images/portfolio/five.png" alt="Image">
@@ -501,9 +501,9 @@
                                  </h4>
                               </div>
                            </div>
-                        </div> -->
+                        </div>
                      </div>
-                  </div>
+                  </div> -->
                   <div class="lines d-none d-lg-flex">
                      <div class="line"></div>
                      <div class="line"></div>
@@ -517,6 +517,66 @@
                <section class="section offer fade-wrapper light">
                   <div class="container">
                      <div class="row gaper">
+                        <div class="col-12 col-lg-7 col-xl-6 offset-xl-1">
+                           <div class="offer__cta">
+                              <div class="offer__cta-single fade-top">
+                                 <span class="sub-title">
+                                    01
+                                    <i class="fa-solid fa-arrow-right"></i>
+                                 </span>
+                                 <h4>
+                                    <a href="service-single.html">
+                                       Activation Booth
+                                       <i class="fa-sharp fa-solid fa-arrow-up-right"></i>
+                                    </a>
+                                 </h4>
+                                 <div class="offer-thumb-hover d-none d-md-block"
+                                    data-background="assets/images/agency/bg-3.jpg"></div>
+                              </div>
+                              <div class="offer__cta-single fade-top">
+                                 <span class="sub-title">
+                                    02
+                                    <i class="fa-solid fa-arrow-right"></i>
+                                 </span>
+                                 <h4>
+                                    <a href="service-single.html">
+                                       Graphic Design
+                                       <i class="fa-sharp fa-solid fa-arrow-up-right"></i>
+                                    </a>
+                                 </h4>
+                                 <div class="offer-thumb-hover d-none d-md-block"
+                                    data-background="assets/images/portfolio/branding.jpg"></div>
+                              </div>
+                              <div class="offer__cta-single fade-top">
+                                 <span class="sub-title">
+                                    03
+                                    <i class="fa-solid fa-arrow-right"></i>
+                                 </span>
+                                 <h4>
+                                    <a href="service-single.html">
+                                       web development
+                                       <i class="fa-sharp fa-solid fa-arrow-up-right"></i>
+                                    </a>
+                                 </h4>
+                                 <div class="offer-thumb-hover d-none d-md-block"
+                                    data-background="assets/images/portfolio/website.jpg"></div>
+                              </div>
+                              <div class="offer__cta-single fade-top">
+                                 <span class="sub-title">
+                                    04
+                                    <i class="fa-solid fa-arrow-right"></i>
+                                 </span>
+                                 <h4>
+                                    <a href="service-single.html">
+                                       Animation
+                                       <i class="fa-sharp fa-solid fa-arrow-up-right"></i>
+                                    </a>
+                                 </h4>
+                                 <div class="offer-thumb-hover d-none d-md-block"
+                                    data-background="assets/images/portfolio/animation.jpg"></div>
+                              </div>
+                           </div>
+                        </div>
                         <div class="col-12 col-lg-5">
                            <div class="offer__content section__content">
                               <span class="sub-title">
@@ -531,66 +591,6 @@
                               </div>
                               <div class="section__content-cta">
                                  <a href="our-services.html" class="btn btn--secondary">view all services</a>
-                              </div>
-                           </div>
-                        </div>
-                        <div class="col-12 col-lg-7 col-xl-6 offset-xl-1">
-                           <div class="offer__cta">
-                              <div class="offer__cta-single fade-top">
-                                 <span class="sub-title">
-                                    01
-                                    <i class="fa-solid fa-arrow-right"></i>
-                                 </span>
-                                 <h2>
-                                    <a href="service-single.html">
-                                       Activation Booth
-                                       <i class="fa-sharp fa-solid fa-arrow-up-right"></i>
-                                    </a>
-                                 </h2>
-                                 <div class="offer-thumb-hover d-none d-md-block"
-                                    data-background="assets/images/agency/bg-3.jpg"></div>
-                              </div>
-                              <div class="offer__cta-single fade-top">
-                                 <span class="sub-title">
-                                    02
-                                    <i class="fa-solid fa-arrow-right"></i>
-                                 </span>
-                                 <h2>
-                                    <a href="service-single.html">
-                                       Graphic Design
-                                       <i class="fa-sharp fa-solid fa-arrow-up-right"></i>
-                                    </a>
-                                 </h2>
-                                 <div class="offer-thumb-hover d-none d-md-block"
-                                    data-background="assets/images/portfolio/branding.jpg"></div>
-                              </div>
-                              <div class="offer__cta-single fade-top">
-                                 <span class="sub-title">
-                                    03
-                                    <i class="fa-solid fa-arrow-right"></i>
-                                 </span>
-                                 <h2>
-                                    <a href="service-single.html">
-                                       web development
-                                       <i class="fa-sharp fa-solid fa-arrow-up-right"></i>
-                                    </a>
-                                 </h2>
-                                 <div class="offer-thumb-hover d-none d-md-block"
-                                    data-background="assets/images/portfolio/website.jpg"></div>
-                              </div>
-                              <div class="offer__cta-single fade-top">
-                                 <span class="sub-title">
-                                    04
-                                    <i class="fa-solid fa-arrow-right"></i>
-                                 </span>
-                                 <h2>
-                                    <a href="service-single.html">
-                                       Animation
-                                       <i class="fa-sharp fa-solid fa-arrow-up-right"></i>
-                                    </a>
-                                 </h2>
-                                 <div class="offer-thumb-hover d-none d-md-block"
-                                    data-background="assets/images/portfolio/animation.jpg"></div>
                               </div>
                            </div>
                         </div>
